[package]
name = "weather"
version = "0.1.0"
authors = ["ellis"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.3", features = ["json"] }
serde_json = "1.0"

anyhow = "1.0.34" # eww! not in lib code!

serde = { version = "1.0", features = ["derive"] }
ron = "0.6.4"

chrono = { version = "0.4.19", features = ["serde"] }
tracing = "0.1.26" # consider other options
